// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartIcon Component should handle basic icons, variations in settings: dash 1`] = `
<span
  class="curiosity-chartarea__icon curiosity-chartarea__icon-dash"
>
  <span
    class="curiosity-icon__dash"
    style="width: 2em; height: 1em;"
  >
    <svg
      aria-labelledby="lorem ipsum dash"
      height="100%"
      role="img"
      viewBox="0 0 38 10"
      width="100%"
    >
      <rect
        height="10"
        width="10"
        y="5"
      />
      <rect
        height="10"
        width="10"
        x="14"
        y="5"
      />
      <rect
        height="10"
        width="10"
        x="28"
        y="5"
      />
    </svg>
  </span>
</span>
`;

exports[`ChartIcon Component should handle basic icons, variations in settings: eye 1`] = `
<span
  class="curiosity-chartarea__icon curiosity-chartarea__icon-eye"
>
  <svg
    aria-label="hello world"
    aria-labelledby="icon-title-0"
    class="pf-v5-svg"
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 576 512"
    width="1em"
  >
    <title
      id="icon-title-0"
    >
      lorem ipsum eye
    </title>
    <path
      d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"
    />
  </svg>
</span>
`;

exports[`ChartIcon Component should handle basic icons, variations in settings: eyeSlash 1`] = `
<span
  class="curiosity-chartarea__icon curiosity-chartarea__icon-eyeSlash"
>
  <svg
    aria-labelledby="icon-title-1"
    class="pf-v5-svg"
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 640 512"
    width="1em"
  >
    <title
      id="icon-title-1"
    >
      lorem ipsum eyeSlash
    </title>
    <path
      d="M320 400c-75.85 0-137.25-58.71-142.9-133.11L72.2 185.82c-13.79 17.3-26.48 35.59-36.72 55.59a32.35 32.35 0 0 0 0 29.19C89.71 376.41 197.07 448 320 448c26.91 0 52.87-4 77.89-10.46L346 397.39a144.13 144.13 0 0 1-26 2.61zm313.82 58.1l-110.55-85.44a331.25 331.25 0 0 0 81.25-102.07 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64a308.15 308.15 0 0 0-147.32 37.7L45.46 3.37A16 16 0 0 0 23 6.18L3.37 31.45A16 16 0 0 0 6.18 53.9l588.36 454.73a16 16 0 0 0 22.46-2.81l19.64-25.27a16 16 0 0 0-2.82-22.45zm-183.72-142l-39.3-30.38A94.75 94.75 0 0 0 416 256a94.76 94.76 0 0 0-121.31-92.21A47.65 47.65 0 0 1 304 192a46.64 46.64 0 0 1-1.54 10l-73.61-56.89A142.31 142.31 0 0 1 320 112a143.92 143.92 0 0 1 144 144c0 21.63-5.29 41.79-13.9 60.11z"
    />
  </svg>
</span>
`;

exports[`ChartIcon Component should handle basic icons, variations in settings: infinity 1`] = `
<span
  class="curiosity-chartarea__icon curiosity-chartarea__icon-infinity"
>
  <span
    class="curiosity-icon__f-infinity"
    style="font-size: 1.5em;"
    title="lorem ipsum infinity"
  >
    <span
      aria-hidden="true"
    >
      ∞
    </span>
  </span>
</span>
`;

exports[`ChartIcon Component should handle basic icons, variations in settings: threshold 1`] = `
<span
  class="curiosity-chartarea__icon curiosity-chartarea__icon-threshold"
>
  <span
    class="curiosity-icon__threshold"
    style="width: 6em; height: 3em;"
  >
    <svg
      aria-hidden="true"
      height="100%"
      role="img"
      viewBox="0 0 18 10"
      width="100%"
    >
      <line
        stroke="#ff0000"
        stroke-dasharray="4,3"
        stroke-width="3"
        x1="0"
        x2="144"
        y1="24"
        y2="24"
      />
    </svg>
  </span>
</span>
`;

exports[`ChartIcon Component should render a basic component: basic 1`] = `
<span
  className="curiosity-chartarea__icon curiosity-chartarea__icon-square"
>
  <SquareIcon
    size="sm"
    title={null}
  />
</span>
`;
